[package]
name = "db"
version = "0.1.0"
authors = ["Peter Connelly <pconnelly898@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
diesel = { version = "1.4.4", features = ["mysql"] }
mysql = "12.0.4"